fix: Glitching when scrollbar is visable

--- a/packages/bruno-app/src/feature/main-view/components/RequestPaneSplit.module.scss
+++ b/packages/bruno-app/src/feature/main-view/components/RequestPaneSplit.module.scss
@@ -11,6 +11,7 @@
   overflow-x: hidden;
   overflow-y: auto;
   position: relative;
+  scrollbar-width: none;
 }
 
 .split {
